Fix vertical alignment in safari

--- a/packages/@adobe/spectrum-css-temp/components/fieldlabel/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/fieldlabel/index.css
@@ -164,6 +164,11 @@ governing permissions and limitations under the License.
         display: table-cell;
       }
 
+      .spectrum-Field-labelCell {
+        /* This fixes vertical alignment in safari */
+        vertical-align: top;
+      }
+
       &.spectrum-Field--alignEnd .spectrum-Field-labelCell {
         text-align: end;
       }
